changed font color

--- a/BlazorApp/Components/Pages/Product.razor.css
+++ b/BlazorApp/Components/Pages/Product.razor.css
@@ -49,6 +49,14 @@
 
 .col .priceTag {
     text-align: left;
+
+}
+
+.priceColor {
+    background: #9F24FF;
+    background: linear-gradient(to right, #9F24FF 0%, #009EFF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .col .btn-dark {
