--- a/BlazorApp/Components/Pages/ProductList.razor
+++ b/BlazorApp/Components/Pages/ProductList.razor
@@ -19,7 +19,7 @@
 </div>
 
 <!-- Show amount of products -->
-<h5 class="productsCount">Total products: @DB.allItems.Count</h5>
+<h5 class="productsCount">Total products: <b class="textColor">@DB.allItems.Count</b></h5>
 
 <!-- Filter: Select platform and choose between highest or lowest price order -->
 <div>
