--- a/BlazorApp/Components/ReusableComponents/Listing.razor.css
+++ b/BlazorApp/Components/ReusableComponents/Listing.razor.css
@@ -113,8 +113,10 @@
 
 .game-price {
     font-size: 2.5rem;
-    color: deepskyblue;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    background: #9F24FF;
+    background: linear-gradient(to right, #9F24FF 0%, #009EFF 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     margin-top: auto;
 }
 
@@ -133,6 +135,27 @@
 @media (max-width: 768px) {
     .game-grid {
         grid-template-columns: repeat(auto-fill, minmax(40%, 0.5fr)); /* Juster min-width for at passe ind i mindre skærme */
+    }
+    .col-1 {
+        min-width: 5rem;
+    }
+
+    .game-title {
+        font-size: 0.9rem;
+    }
+
+    .game-created, .game-genre, .game-manufacture, .game-description {
+        font-size: 0.6rem;
+    }
+
+    .game-price, .game-condition {
+        font-size: 0.7rem;
+    }
+
+
+}@media (max-width: 650px) {
+    .game-grid {
+        grid-template-columns: repeat(auto-fill, minmax(100%, 0.0fr)); /* Juster min-width for at passe ind i mindre skærme */
     }
     .col-1 {
         min-width: 5rem;
