--- a/BlazorApp/Components/Pages/Product.razor.css
+++ b/BlazorApp/Components/Pages/Product.razor.css
@@ -68,6 +68,13 @@
     margin-top: 0.2rem;
 }
 
+.button_container button {
+    background-color: #b3b3b3;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
 .favoriteStar {
     position: relative;
     margin-top: 1.0%;
@@ -146,4 +153,3 @@
     width: 80%;
     max-width: 600px;
 }
-
