--- a/BlazorApp/Components/Pages/Product.razor.css
+++ b/BlazorApp/Components/Pages/Product.razor.css
@@ -72,6 +72,7 @@
     position: relative;
     margin-top: 1.0%;
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.5));
+    z-index: 10;
 }
 
 .favoriteStarText {
