--- a/BlazorApp/Components/ReusableComponents/SellerDetails.razor
+++ b/BlazorApp/Components/ReusableComponents/SellerDetails.razor
@@ -7,8 +7,11 @@
         if (!ShowOnlyLocation)
         {
             <p class="name"><b>Name: </b>@sellerDetail.name</p>
+            <p class="tel"><b>Phone Number: </b>@sellerDetail.phoneNumber</p>
+            <p class="mail"><b>Email: </b>@sellerDetail.email</p>
+
         }
-        <p class="location"><b>Location: </b>@sellerDetail.city</p>
+
     }
 </div>
 
