--- a/BlazorApp/Components/ReusableComponents/SellerDetails.razor
+++ b/BlazorApp/Components/ReusableComponents/SellerDetails.razor
@@ -6,9 +6,9 @@
     {
         if (!ShowOnlyLocation)
         {
-            <p class="name"><b>Name: </b>@sellerDetail.name</p>
-            <p class="tel"><b>Phone Number: </b>@sellerDetail.phoneNumber</p>
-            <p class="mail"><b>Email: </b>@sellerDetail.email</p>
+            <p class="name compact-p"><b>Name: </b>@sellerDetail.name</p>
+            <p class="tel compact-p"><b>Phone Number: </b>@sellerDetail.phoneNumber</p>
+            <p class="mail compact-p"><b>Email: </b>@sellerDetail.email</p>
 
         }
 
