--- a/BlazorApp/Components/ReusableComponents/GallerySlider.razor
+++ b/BlazorApp/Components/ReusableComponents/GallerySlider.razor
@@ -4,7 +4,7 @@
     {
         var path = $"/Picture/{images[i]}.png";
         <div class="carousel-item @(currentIndex == i ? "active" : "")">
-            <img src="@path" alt="Image @i" />
+            <img src="@path" alt="Image @i" class="image"/>
         </div>
 
     }
