--- a/BlazorApp/Components/Layout/MainLayout.razor
+++ b/BlazorApp/Components/Layout/MainLayout.razor
@@ -23,17 +23,17 @@
                         <ul class="navbar-nav flex-grow-1" id="new-navbar-menu">
                             <li class="nav-item-show">
                                 <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Gamers Lounge
+                                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true" style="font-family: 'Bradley Hand ITC';"></span> Gamers Lounge
                                 </NavLink>
                             </li>
                             <li class="nav-item-show">
                                 <NavLink class="nav-link" href="productlist">
-                                    <span id="navlink" class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Product list
+                                    <span id="navlink" class="bi bi-list-nested-nav-menu" aria-hidden="true" style="font-family: 'Bradley Hand ITC';"></span> Product list
                                 </NavLink>
                             </li>
                             <li class="nav-item-show">
                                 <NavLink class="nav-link" href="SalesListing">
-                                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> List for sale
+                                    <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true" style="font-family: 'Bradley Hand ITC';"></span> List for sale
                                 </NavLink>
                             </li>
                         </ul>
@@ -43,8 +43,8 @@
 
 						@if (AuthenticationService.IsAuthenticated)
 						{
-							<button class="btn btn-link" @onclick="profilePage">Logget ind som: @AuthenticationService.CurrentUser.name</button>
-							<button type="button" class="btn btn-link" @onclick="logout">Log Out</button>
+                        <button class="btn btn-link" @onclick="profilePage" style="font-family: 'Bradley Hand ITC';">Logget ind som: @AuthenticationService.CurrentUser.name</button>
+                        <button type="button" class="btn btn-link" @onclick="logout" style="font-family: 'Bradley Hand ITC';">Log Out</button>
 						}
 						else
 						{
